--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,16 +13,17 @@ on:
   schedule:
   - cron: 0 2 * * *
 
-
 jobs:
-  job1:
+  job0:
     name: Test (${{ matrix.test_block }}) on ${{ matrix.os }} with golang ${{ matrix.golang_version }}
+
     strategy:
       matrix:
         # TODO: Add tip when it's supported: https://github.com/actions/setup-go/issues/21
         os: [ubuntu-latest] # add macOS-latest
         golang_version: ["1.11.x"] # add "1.12.x" and tip
         test_block: ["basic", "shell", "race"]
+      fail-fast: false
 
     runs-on: ${{ matrix.os }}
 
